Enhance job listing functionality and UI in popup: update manifest, improve job rendering, and add job data

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Global Inter-Connect Jobs",
-  "description": "Connecting the global workforce through one extension.",
   "version": "1.0",
+  "description": "Connecting the global workforce through one extension. Find jobs abroad that accept international travelers.",
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
@@ -14,7 +14,11 @@
   ],
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["jobs.json"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
-
-
