Update manifest and enhance job fetching in popup: add permissions for Remotive API and refactor job rendering logic

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
   "permissions": [
     "storage",
     "activeTab",
-    "scripting"
+    "scripting",
+    "https://remotive.com/*"
   ],
   "background": {
     "service_worker": "background.js"
@@ -22,3 +23,4 @@
     }
   ]
 }
+
