--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Global Inter-Connect Jobs",
-  "version": "1.1",
-  "description": "Connecting the global workforce through one extension. Find remote and abroad jobs that accept international travelers.",
+  "version": "1.0",
+  "description": "Connecting the global workforce through one extension. Find jobs abroad that accept international travelers.",
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
@@ -18,7 +18,14 @@
   "host_permissions": [
     "https://remotive.com/*",
     "https://api.adzuna.com/*"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["jobs.json"],
+      "matches": ["<all_urls>"]
+    }
   ]
 }
+
 
 
