Update popup.js, popup.html, and manifest.json with debug-ready API and Get Started fix

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Global Inter-Connect Jobs",
   "version": "1.0",
-  "description": "Connecting the global workforce through one extension. Find jobs abroad or remote opportunities.",
+  "description": "Connecting the global workforce through one extension. Find jobs abroad that accept international travelers.",
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
@@ -12,15 +12,13 @@
     "activeTab",
     "scripting"
   ],
-  "host_permissions": [
-    "https://remotive.com/*",
-    "https://api.adzuna.com/*"
-  ],
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["jobs.json"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
-
-
-
-
